--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,17 @@ name = "neurxai-labs-repo-ingestion-agent"
 version = "0.1.0"
 description = "A repository ingestion agent for NeurX AI Labs."
 authors = ["pandeyvishal.mlprof@gmail.com"]
+packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.78.0"
+fastapi = "^0.100.0"
 uvicorn = "^0.18.2"
-python-dotenv = "^0.20.0"
+python-dotenv = "^0.21.0"
 requests = "^2.28.1"
 GitPython = "^3.1.27"
-pydantic = "^1.9.1"
+pydantic = "^2.0"
+pydantic-settings = "^2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
