--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.28.1"
 GitPython = "^3.1.27"
 pydantic = "^2.0"
 pydantic-settings = "^2.0"
+python-json-logger = "^2.0.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
