--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,19 @@ packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.100.0"
-uvicorn = "^0.18.2"
-python-dotenv = "^0.21.0"
-requests = "^2.28.1"
-GitPython = "^3.1.27"
-pydantic = "^2.0"
-pydantic-settings = "^2.0"
+fastapi = "^0.110.0"
+uvicorn = "^0.23.2"
+python-dotenv = "^1.0.0"
+requests = "^2.31.0"
+GitPython = "^3.1.32"
+pydantic = "^2.4.2"
+pydantic-settings = "^2.0.3"
 python-json-logger = "^2.0.7"
+httpx = "^0.25.0"
+sqlalchemy = "^2.0.22"
+pika = "^1.3.2"
+prometheus-client = "^0.17.1"
+Jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
