--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,10 +1,28 @@
-# Placeholder for Dockerfile
-FROM python:3.9-slim
+# Secure Dockerfile for Python app
+FROM python:3.9-slim-bookworm
+
+# Update system packages and install security updates
+RUN echo "nameserver 8.8.8.8" > /etc/resolv.conf && \
+    apt-get update \
+    && apt-get upgrade -y \
+    && apt-get install -y --no-install-recommends gcc build-essential libpq-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY . .
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Python dependencies
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt \
+    && pip cache purge
+
+# Remove build dependencies to reduce image size and attack surface
+RUN apt-get purge -y --auto-remove gcc build-essential libpq-dev
+
+# Create a non-root user and switch to it
+RUN useradd -m appuser
+USER appuser
 
 CMD ["python", "app/main.py"]
