--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   repository-agent:
     build:
@@ -7,32 +8,44 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - QUEUE_URL=amqp://guest:guest@rabbitmq:5672/%2F
+      - QUEUE_URL=amqp://user:bitnami@rabbitmq:5672/
       - WORK_DIR=/tmp/workdir
       - MAX_CHUNK_SIZE=1024
       - PORT=8000
       - CLONE_ROOT=${CLONE_ROOT}
     volumes:
-      - ${CLONE_ROOT}:${CLONE_ROOT}
+      - ${CLONE_ROOT:-/tmp/clones}:${CLONE_ROOT:-/tmp/clones}
     depends_on:
       - rabbitmq
+
   rabbitmq:
-    image: "rabbitmq:3-management"
+    image: bitnami/rabbitmq:3.13.7
+    container_name: rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
-  kafka:
-    image: 'bitnami/kafka:latest'
+    environment:
+      - RABBITMQ_USERNAME=user
+      - RABBITMQ_PASSWORD=bitnami
+
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    container_name: zookeeper
     ports:
-      - '9092:9092'
+      - "2181:2181"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: bitnami/kafka:latest
+    container_name: kafka
+    ports:
+      - "9092:9092"
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_CFG_BROKER_ID=1
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
-  zookeeper:
-    image: 'bitnami/zookeeper:latest'
-    ports:
-      - '2181:2181'
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
