--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   repository-agent:
     build:
@@ -7,45 +5,36 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
+      - "8001:8001"
     environment:
-      - QUEUE_URL=amqp://user:bitnami@rabbitmq:5672/
+      - QUEUE_URL=amqp://guest:guest@rabbitmq:5672//
       - WORK_DIR=/tmp/workdir
       - MAX_CHUNK_SIZE=1024
       - PORT=8000
-      - CLONE_ROOT=${CLONE_ROOT}
-    volumes:
-      - ${CLONE_ROOT:-/tmp/clones}:${CLONE_ROOT:-/tmp/clones}
+      - PROM_METRICS_PORT=8001
+      - DATABASE_URL=sqlite:///./repo_ingestion.db
+      - LOG_LEVEL=INFO
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+    volumes:
+      - repo_data:/tmp/workdir
+    restart: unless-stopped
 
   rabbitmq:
-    image: bitnami/rabbitmq:3.13.7
-    container_name: rabbitmq
+    image: "rabbitmq:3-management"
     ports:
       - "5672:5672"
       - "15672:15672"
     environment:
-      - RABBITMQ_USERNAME=user
-      - RABBITMQ_PASSWORD=bitnami
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    restart: unless-stopped
 
-  zookeeper:
-    image: bitnami/zookeeper:latest
-    container_name: zookeeper
-    ports:
-      - "2181:2181"
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-
-  kafka:
-    image: bitnami/kafka:latest
-    container_name: kafka
-    ports:
-      - "9092:9092"
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
-      - KAFKA_CFG_BROKER_ID=1
-      - ALLOW_PLAINTEXT_LISTENER=yes
-    depends_on:
-      - zookeeper
+volumes:
+  repo_data:
