--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,28 +1,47 @@
-# Secure Dockerfile for Python app
-FROM python:3.9-slim-bookworm
+FROM python:3.9-slim
 
-# Update system packages and install security updates
-RUN echo "nameserver 8.8.8.8" > /etc/resolv.conf && \
-    apt-get update \
-    && apt-get upgrade -y \
-    && apt-get install -y --no-install-recommends gcc build-essential libpq-dev \
+# Install system dependencies including git for cloning repositories
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    git \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Set working directory
 WORKDIR /app
 
-COPY . .
+# Copy requirements file first for better Docker layer caching
+COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt \
-    && pip cache purge
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
-# Remove build dependencies to reduce image size and attack surface
-RUN apt-get purge -y --auto-remove gcc build-essential libpq-dev
+# Copy the entire application code
+COPY . .
 
-# Create a non-root user and switch to it
-RUN useradd -m appuser
+# Create necessary directories
+RUN mkdir -p /tmp/workdir && \
+    mkdir -p /app/logs
+
+# Create a non-root user for security
+RUN useradd -m -u 1000 appuser && \
+    chown -R appuser:appuser /app && \
+    chown -R appuser:appuser /tmp/workdir
+
+# Switch to non-root user
 USER appuser
 
+# Expose ports for the web server and Prometheus metrics
+EXPOSE 8000 8001
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD python -c "import requests; requests.get('http://localhost:8000/', timeout=5)" || exit 1
+
+# Set environment variables with defaults
+ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
+
+# Run the application
 CMD ["python", "app/main.py"]
